other-cel/restrict-sa-automount-sa-token/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-sa-automount-sa-token
policies:
- ../restrict-sa-automount-sa-token.yaml
resources:
- resource.yaml
results:
- kind: ServiceAccount
  policy: restrict-sa-automount-sa-token
  resources:
  - bad-svc
  result: fail
  rule: validate-sa-automountServiceAccountToken
- kind: ServiceAccount
  policy: restrict-sa-automount-sa-token
  resources:
  - good-svc
  result: pass
  rule: validate-sa-automountServiceAccountToken
